[package]
name = "pony"
version = "0.0.0"
description = "Binaries for the Pony repo."
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[workspace.package]
authors = ["Silk Rose", "Meadowsys"]
edition = "2021"
license = "MIT"
repository = "https://github.com/SilkRose/Pony"

[dependencies]
camino = { workspace = true }
git2 = { version = "0.19.0" }
image = { version = "0.25.2" }
indoc = { version = "2.0.5" }
markdown = { version = "1.0.0-alpha.20" }
num_cpus = { version = "1.16.0" }
regex = { workspace = true }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["preserve_order"] }

[workspace.dependencies]
camino = { version = "1.1.9" }
proc-macro2 = { version = "1.0.86" }
quote = { version = "1.0.37" }
regex = { version = "1.10.6" }
syn = { version = "2.0.76" }

[workspace]
members = ["packages/fanfic", "packages/fanfic-macros"]

[profile.dev]
opt-level = 0
debug-assertions = true
debug = true
incremental = true

[profile.release]
strip = true
opt-level = 3
debug-assertions = false
lto = true
codegen-units = 1
