[package]
name = "pony"
version = "0.0.0"
description = "Binaries for the Pony repo."
publish = false
authors = ["Silk Rose", "Meadowsys"]
edition = "2021"
license = "MIT"
repository = "https://github.com/SilkRose/Pony"

[dependencies]
camino = { version = "1.1.9" }
git2 = { version = "0.19.0" }
image = { version = "0.25.2" }
indoc = { version = "2.0.5" }
markdown = { version = "1.0.0-alpha.20" }
regex = { version = "1.10.6" }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["preserve_order"] }

[profile.dev]
opt-level = 0
debug-assertions = true
debug = true
incremental = true

[profile.release]
strip = true
opt-level = 3
debug-assertions = false
lto = true
codegen-units = 1
