[package]
name = "fim"
version = "0.1.0"
description = "Firendship is Markdown, a simple terminal based Markdown editor."
repository = "https://github.com/SilkRose/Pony"
homepage = "https://github.com/SilkRose/Pony/tree/mane/code/fim"
authors = ["Silk Rose", "Meadowsys"]
edition = "2021"
license = "CC0-1.0"
license-file = "../../LICENSE.md"
readme = "./README.md"

[dependencies]

[profile.dev]
opt-level = 0
debug-assertions = true
debug = true
incremental = true

[profile.release]
strip = true
opt-level = 3
debug-assertions = false
lto = true
codegen-units = 1
