[package]
name = "fimdoc"
version = "0.1.7"
description = "Firendship is Magic Document, converts Markdown into FIMFiction BBCode."
repository = "https://github.com/SilkRose/Pony"
homepage = "https://github.com/SilkRose/Pony/tree/mane/code/fimdoc"
authors = ["Silk Rose", "Meadowsys"]
edition = "2021"
license = "CC0-1.0"
readme = "./README.md"

[dependencies]
camino = { version = "1.1.6" }
markdown = { version = "1.0.0-alpha.16" }
