[package]
name = "fim"
version = "0.4.4"
description = "Firendship is Markdown, a simple terminal based Markdown editor."
homepage = "https://github.com/SilkRose/Pony/tree/mane/archive/code/fim"
readme = "./readme.md"
authors = ["Silk Rose", "Meadowsys"]
edition = "2021"
license = "MIT"
repository = "https://github.com/SilkRose/Pony"

[dependencies]
camino = { version = "1.1.6" }
crossterm = { version = "0.27.0" }
