[package]
name = "fimdoc"
version = "0.3.4"
description = "Firendship is Magic Document, converts Markdown into FIMFiction BBCode."
homepage = "https://github.com/SilkRose/Pony/tree/mane/code/applications/fimdoc"
readme = "./readme.md"

repository = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
camino = { workspace = true }
markdown = { workspace = true }
golden-oak = { workspace = true }
