[package]
name = "fim"
version = "0.4.2"
description = "Firendship is Markdown, a simple terminal based Markdown editor."
homepage = "https://github.com/SilkRose/Pony/tree/mane/archive/code/rust/fim"
readme = "./README.md"

repository = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
camino = { workspace = true }
crossterm = { workspace = true }
