[package]
name = "fimfic-april-fools-2024"
version = "0.1.0"
description = "Mane code for the Exploding Story event that took place April 1st, 2024."
homepage = "https://github.com/SilkRose/Pony/tree/mane/archive/code/rust/fimfic-april-fools-2024"
authors = ["Silk Rose", "Meadowsys"]
edition = "2021"
license = "MIT"
repository = "https://github.com/SilkRose/Pony"
publish = false

[dependencies]
async-recursion = "1.1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
wiwi = { version = "0.5.3", features = ["clock-timer-2", "tokio"] }
